--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts.astro';
+import Layout from '../layouts/layouts.astro';
 
 // Si hay parámetro dinámico (slug), lo tomamos por si más adelante querés usarlo.
 const { slug } = Astro.params;
